force-app/main/default/objects/Roster_P2P_NR_Data__c/Roster_P2P_NR_Data__c.object-meta.xml
<CustomObject>
    <description>SOX object - Object contains Sales Rep data like employee ID, Reporting Manager details and Compensation plan.</description>
    <label>Roster P2P NR Data</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Roster P2P NR Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roster P2P NR Data&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>