force-app/main/default/objects/Roster_P2P_NR_Data__c/fields/From_Rep_Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>From_Rep_Comp_Plan__c</fullName>
    <label>From Rep Comp Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>