force-app/main/default/objects/Roster_P2P_NR_Data__c/fields/To_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>To_Rep_Name__c</fullName>
    <label>To Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>